# dsjourney

./: README.md
np_fs_ratio /: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
np_fs_ratio /.github/workflows/: ci-cd.yml
np_fs_ratio /docs/: Makefile  conf.py  example.ipynb  make.bat
np_fs_ratio /src/np_fs_ratio/: np_fs_ratio.py
np_fs_ratio /tests/: test_np_fs_ratio.py
