[tool.poetry]
name = "np_fs_ratio"
version = "0.1.6"
description = "This is a packaggeto calculate, compare, and illustrate tsome financial ratios for the nonprofit organization of your choice. "
authors = ["Jasmine Chen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sphinx = "^5.3.0"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
pytest = "^7.2.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
